--- a/moon-calendar/style.css
+++ b/moon-calendar/style.css
@@ -4,7 +4,7 @@ body{
 #ex3{    
 max-width: 700px;
 margin:20px auto;
-background-color: #333333;
+background-color: rgba(0,0,0,0);
 padding: 1%;
 color:white;
 box-sizing: border-box;
