--- a/moon-calendar/style.css
+++ b/moon-calendar/style.css
@@ -11,7 +11,7 @@ box-sizing: border-box;
 font-family:sans-serif;
 }
 #isToDay{
-box-shadow:inset 0 0 0 1px darkgray;
+box-shadow:inset 0 0 0 1px yellow;
 }
 .day_box,.name_day,.titleCalendar,.buttonCalendar{
 width: calc(100% / 7);
