--- a/moon-calendar/style.css
+++ b/moon-calendar/style.css
@@ -6,7 +6,7 @@ max-width: 700px;
 margin:20px auto;
 background-color: rgba(0,0,0,0);
 padding: 1%;
-color:white;
+color: black;
 box-sizing: border-box;
 font-family:sans-serif;
 }
