--- a/moon-calendar/style.css
+++ b/moon-calendar/style.css
@@ -34,6 +34,7 @@ cursor:pointer;
 }
 .name_day{
 overflow: hidden;
+color: black;
 font-size: 11px;
 padding: 1px;
 box-sizing: border-box;
@@ -43,7 +44,7 @@ text-align: center;
 .day_box{
 text-align: left!important;
 font-size: 11px;
-background-image: linear-gradient(black, #222222); 
+background-image: linear-gradient(#383838, #808080); 
 background-size: 97% 97%;
 background-position: center center;
 background-repeat: no-repeat;
