--- a/moon-calendar/style.css
+++ b/moon-calendar/style.css
@@ -28,6 +28,7 @@ background-color: black;
 text-align: center;
 color:white;
 border:none;
+border-radius: 25px;
 font-size: 18px;
 padding:0;
 cursor:pointer;
@@ -44,7 +45,7 @@ text-align: center;
 .day_box{
 text-align: left!important;
 font-size: 11px;
-background-image: linear-gradient(#383838, #808080); 
+background-image: linear-gradient(#181818, #282828); 
 background-size: 97% 97%;
 background-position: center center;
 background-repeat: no-repeat;
@@ -59,7 +60,7 @@ background-position: 95% 95%;
 }
 .day_box>div>span{
 position: absolute;
-color: black;
+color: white;
 font-size: 1em;
 text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
