--- a/moon-calendar/style.css
+++ b/moon-calendar/style.css
@@ -35,7 +35,7 @@ cursor:pointer;
 }
 .name_day{
 overflow: hidden;
-color: black;
+color: white;
 font-size: 11px;
 padding: 1px;
 box-sizing: border-box;
